# fib-api

./: Procfile  README.md  pyproject.toml  requirements.txt
fastapi_fibonacci/: main.py  test_main.py
tests/: test_main.py
