[tool.poetry]
name = "fastapi-fibonacci"
version = "0.1.0"
description = ""
authors = ["Kosuke Sugiura <koosuke711@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
